fixes mobile spacing

--- a/css/main.css
+++ b/css/main.css
@@ -277,7 +277,6 @@ h3 {
   }
 
   .contact-buttons {
-    height: 400px;
     width: 100%;
   }
 }
